# cms

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  dev-requirements.txt  docker-compose.yml  ojuzgen.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml
cms/: conf.py
cms/db/: __init__.py  base.py  contest.py  filecacher.py  submission.py  task.py  types.py  user.py  util.py
cms/grading/: Job.py  Sandbox.py
cms/grading/languages/: brainfuck.py  cpp11_gpp.py  cpp14_gpp.py  cpp17_gpp.py  cpp20_gpp.py  csharp_mono.py  go.py  java_jdk.py  javascript.py  kotlin.py  python3_cpython.py  python3_pypy.py  rust.py  swift.py  typescript.py
cms/grading/steps/: compilation.py  evaluation.py
cms/grading/tasktypes/: Batch.py  Communication.py  Ojuz.py  util.py
cms/io/: web_service.py
cms/locale/de/LC_MESSAGES/: cms.po
cms/server/: jinja2_toolbox.py
cms/server/admin/: authentication.py
cms/server/admin/handlers/: __init__.py  contest.py  contestannouncement.py  contestuser.py  dataset.py
cms/server/admin/templates/: add_language_template.html  add_test_manager.html  announcements.html  contest.html  participation.html  questions.html  task.html
cms/server/contest/: authentication.py  server.py
cms/server/contest/handlers/: __init__.py  contest.py  main.py  tasksubmission.py
cms/server/contest/static/: cws_style.css
cms/server/contest/submission/: workflow.py
cms/server/contest/templates/: contest.html  sso_error.html  submission_details.html  task_submissions.html
cms/service/: EvaluationService.py  ResourceService.py  ScoringService.py  Worker.py  esoperations.py  scoringoperations.py
cmscommon/: crypto.py
cmscontrib/: AddSubmission.py  CleanFiles.py  MigrateAddSubtaskScore.py  create_sandbox_rootfs.sh  importing.py  ojuzgen.py
cmscontrib/aoi/: __main__.py  const.py  core.py  rule.py  util.py  validation.py  yaml_loader.py  zipprog.py
cmsranking/: RankingWebServer.py
config/: .gitignore  cms.conf.sample  cms.docker.conf  cms.docker.conf.sample
scripts/: cmsDiscordBot
